@@ -16,10 +16,11 @@ import java.security.NoSuchAlgorithmException;
 
 import javax.imageio.ImageIO;
 
+import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
-import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Decoder;
 
 public class ImgUtil {
 	private static final Log log = LogFactory.getLog(ImgUtil.class);
@@ -81,8 +82,9 @@ public class ImgUtil {
 		}
 		String imgPathAndName = photoPath + "/" + imgFileName + "." + filenameExtension; // 存放路徑 + 檔名
 			
-		BASE64Decoder decoder = new BASE64Decoder();
-		byte[] bytes = decoder.decodeBuffer(imgBase64String.split(",")[1]);
+//		BASE64Decoder decoder = new BASE64Decoder();
+//		byte[] bytes = decoder.decodeBuffer(imgBase64String.split(",")[1]);
+		byte[] bytes = Base64.decodeBase64(imgBase64String.split(",")[1].getBytes());
 		ByteArrayInputStream byteArrayInputStream = new ByteArrayInputStream(bytes);
 		if ("gif".equalsIgnoreCase(filenameExtension)) {// gif圖片產生方式，此方式圖片才有動畫
 			Files.copy(byteArrayInputStream, new File(imgPathAndName).toPath(), StandardCopyOption.REPLACE_EXISTING);
